--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "bcrypt": "^5.1.1",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "express-async-errors": "^3.1.1",
     "express-jwt": "^8.4.1",
     "joi": "^17.13.1",
     "jsonwebtoken": "^9.0.2",
