--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "mongoose": "^8.4.1"
   },
   "devDependencies": {
+    "jest": "^29.7.0",
     "nodemon": "^3.1.3",
     "prettier": "^3.3.0"
   },
   "scripts": {
     "start": "node index.js",
-    "dev": "nodemon index.js"
+    "dev": "nodemon index.js",
+    "test": "DOTENV_CONFIG_PATH=.env.test.local jest --watchAll --verbose"
   }
 }
