--- a/package.json
+++ b/package.json
@@ -10,9 +10,16 @@
     "mongoose": "^8.4.1"
   },
   "devDependencies": {
+    "@eslint/js": "^9.5.0",
+    "eslint": "^9.5.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-jest": "^28.6.0",
+    "eslint-plugin-prettier": "^5.1.3",
+    "globals": "^15.6.0",
     "jest": "^29.7.0",
     "nodemon": "^3.1.3",
-    "prettier": "^3.3.0"
+    "prettier": "^3.3.2",
+    "supertest": "^7.0.0"
   },
   "scripts": {
     "start": "node index.js",
