--- a/.gitignore
+++ b/.gitignore
@@ -38,7 +38,8 @@
 .LSOverride
 
 # Icon must end with two \r
-Icon
+Icon
+
 
 # Thumbnails
 ._*
@@ -107,6 +108,7 @@ build/Release
 # Dependency directories
 node_modules/
 jspm_packages/
+coverage/
 
 # Snowpack dependency directory (https://snowpack.dev/)
 web_modules/
@@ -230,4 +232,3 @@ $RECYCLE.BIN/
 *.lnk
 
 # End of https://www.toptal.com/developers/gitignore/api/macos,linux,windows,git,node
-
