--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "express-jwt": "^8.4.1",
     "joi": "^17.13.1",
     "jsonwebtoken": "^9.0.2",
+    "moment": "^2.30.1",
     "mongoose": "^8.4.1"
   },
   "devDependencies": {
